# torch-graphgen

./: .gitignore  pyproject.toml  requirements.txt
example/: generate_adj_edge_list.py  generate_adj_list.py  generate_graph.py
src/: graph.py  utils.py
src/torch_graphgen/: graphgen.py
src/torch_graphgen/utils/: graph.py  inclusion.py
