[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torch_graphgen"
version = "0.0.1"
authors = [
  { name="Alexandre Larouche", email="quoding@protonmail.ch" },
]
description = "Small helper tool to generate symbolic graph of trainable layers given a torch model"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "torch>=2.1.2"
]


[project.urls]
Homepage = "https://github.com/pypa/torch-graphgen"
Issues = "https://github.com/pypa/torch-graphgen/issues"
